<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madlevel4task2.StartFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="43dp"
        android:background="#6200EE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/TextViewStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:text="@string/your_all_time_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <TextView
        android:id="@+id/TextViewStatisticsResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/win_draw_lose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewStatistics" />

    <ImageView
        android:id="@+id/imageResultComputer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:backgroundTint="#6200EE"
        android:backgroundTintMode="add"
        android:contentDescription="@string/computer"
        app:layout_constraintBottom_toBottomOf="@+id/imageResultPlayer"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageResultPlayer" />

    <ImageView
        android:id="@+id/imageResultPlayer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="35dp"
        android:background="@android:color/transparent"
        android:backgroundTint="#6200EE"
        android:backgroundTintMode="add"
        android:contentDescription="@string/you"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <ImageButton
        android:id="@+id/imageButton_rock"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rock"
        android:backgroundTint="#6200EE"
        android:backgroundTintMode="add"
        android:contentDescription="@string/rock"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton_paper"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_paper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton_paper" />

    <ImageButton
        android:id="@+id/imageButton_paper"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/paper"
        android:backgroundTint="#6200EE"
        android:backgroundTintMode="add"
        android:contentDescription="@string/paper"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton_scissors"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_scissors"
        app:layout_constraintStart_toEndOf="@+id/imageButton_rock"
        app:layout_constraintTop_toTopOf="@+id/imageButton_scissors" />

    <ImageButton
        android:id="@+id/imageButton_scissors"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/scissors"
        android:backgroundTint="#6200EE"
        android:backgroundTintMode="add"
        android:contentDescription="@string/scissor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton_paper" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="46dp"
        android:fontFamily="monospace"
        android:text="@string/vs"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/imageResultPlayer"
        app:layout_constraintStart_toEndOf="@+id/imageResultComputer" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:text="@string/computer"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/imageResultComputer"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="223dp"
        android:text="@string/you"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageResultPlayer" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>